<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.svarog.project01.activity.DetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#800000"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <ImageView
        android:contentDescription="@string/movie_poster"
        android:id="@+id/movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/movie_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>


    <RelativeLayout
        android:id="@+id/poster_details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_title"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        >


        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017"
            android:textSize="21sp"
            android:layout_marginBottom="6dp"
            android:layout_alignParentTop="true"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/movie_length"
            android:layout_below="@id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_duration"
            android:layout_marginBottom="6dp"
            android:textSize="18sp"
            android:textColor="#000000" />

        <TextView
            android:accessibilityTraversalBefore="@id/movie_length"
            android:id="@+id/movie_radting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_length"

            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:contentDescription="@string/favorite_button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_radting"
            android:src="@drawable/ic_favorite_black_48dp"
            />

    </RelativeLayout>
    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/description"
        android:layout_below="@+id/movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="#000000"/>

    <View
        android:id="@+id/separation_line"
        android:layout_below="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/rc_title"
        android:layout_margin="6dp"
        android:text="@string/trailers"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_below="@id/separation_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailer_list"
        android:layout_below="@id/rc_title"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/review_title"
            android:text="@string/review"
            android:textStyle="italic"
            android:textColor="#000000"
            android:textSize="20dp"
            android:maxLines="30"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/reviews"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>

        <TextView
            android:layout_margin="5dp"
            android:id="@+id/dates_title"
            android:text="Dates:"
            android:textStyle="italic"
            android:textSize="20dp"
            android:textColor="#000000"
            android:maxLines="30"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_below="@+id/reviews"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dates_title"
            android:background="#ffffff">

            <Button
                android:id="@+id/buybtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="30dp"
                android:text="Buy"
                android:textColor="#ffffff"
                android:layout_marginTop="3dp"
                android:background="#800000"
                android:height="40dp"


                />

            <Button
                android:id="@+id/buy2btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buybtn"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="30dp"
                android:text="Buy"
                android:textColor="#ffffff"
                android:layout_marginTop="3dp"
                android:background="#800000"
                android:height="40dp"


                />

            <Button
                android:id="@+id/buy3btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buy2btn"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="30dp"
                android:text="Buy"
                android:textColor="#ffffff"
                android:layout_marginTop="3dp"
                android:background="#800000"
                android:height="40dp"

                />

            <Button
                android:id="@+id/buy4btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buy3btn"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="30dp"
                android:text="Buy"
                android:textColor="#ffffff"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="#800000"
                android:height="40dp"


                />
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/termin1"
                android:text="16:00h"
                android:textColor="#000000"
                android:maxLines="30"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:height="40dp"

                />
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/termin2"
                android:text="18:00h"
                android:maxLines="30"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:height="40dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/termin1"
                />
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/termin3"
                android:text="20:00h"
                android:maxLines="30"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18dp"
                android:height="40dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/termin2"
                />
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/termin4"
                android:text="22:00h"
                android:maxLines="30"
                android:height="40dp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_below="@+id/termin3"
                />


        </RelativeLayout>



    </RelativeLayout>

</ScrollView>